# Opencl-ex1

./: CMakeLists.txt
Opencl-ex1/: CMakeLists.txt  Lab_project.cpp  OpenCLExercise2_Mandelbrot.cpp  OpenCLExercise3_Sobel.cpp  OpenCLExercise4_MatrixMultiplication.cpp  OpenCLExercise6_PrefixSum.cpp  OpenCLExercise6_VolumeRendering.cpp  Opencl-ex1.cpp  Opencl-ex1.h  Valve.pgm  __add.cpp  ex2_practice.cpp  im2.pgm  im6.pgm  mat_mul_practice.cpp  rpi-16.hdf5  sobel_practice.cpp  try.cpp
Opencl-ex1/Core/: Error.cpp
Opencl-ex1/src/: OpenCLExercise1_Basics.cl  OpenCLExercise2_Mandelbrot.cl  OpenCLExercise3_Sobel.cl  OpenCLExercise4_MatrixMultiplication.cl  OpenCLExercise6_PrefixSum.cl  OpenCLExercise6_VolumeRendering.cl  add_kernel.cl  ex2_kernel.cl  mat_mul_kernel.cl  sobel_kernel.cl  try_kernel.cl
